# VodafoneOEM

./: .gitignore  Makefile.am  README.md  build.sh  configure.ac  vodafoneoem.spec
etc/: Makefile.am
etc/firewalld/services/: oem.xml
etc/profile.d/: setoraenv.sh
lib/python/: .gitignore  Makefile.am  README.md  __init__.py  core.py  create_gold_agent_image.py  create_group.py  creds.py  get_targets.py  promote_gold_agent_image.py  submit_add_host.py  targets.py  update_group_of_agents.py
lib/systemd/: agent.service  oms.service  oracle-database-ee-19c.service
libexec/: Makefile.am  README.md  argparse_ext.py  cluster.py  get_add_host_status.py  get_targets.py  logging_ext.py  promote_cluster.py  promote_discovered_targets.py  secret.py  submit_add_host.py  update_group_of_agents.py  utils.py  vf_create_gold_agent_image.py  vf_deploy_agent.py  vf_generate_properties_config.py  vf_get_targets.py  vf_group.py  vf_list_gold_agent_images.py  vf_promote_cluster.py  vf_promote_gold_agent_image.py  vf_promote_osm_cluster.py  vf_run_auto_discovery.py  vf_update_group_of_agents.py
share/: Makefile.am  README.md  logging.conf.example  magic  node.ini.example  oms.ini  properties.ini.example
share/doc/: cluster.json  examples.py  examples.sh  unmanaged.json
share/man/man1/: Makefile.am  nbread.1
