SUFFIXES = .py 

pythonlibdir = $(libdir)/python

#python_PYTHON  
#pkgpython_PYTHON
#pyexecdir_PYTHON
#pkgpyexecdir_PYTHON
#pyexecdir_PYTHON

pythonlib_PYTHON = \
	create_gold_agent_image.py \
	create_group.py \
	get_add_host_status.py \
	get_targets.py \
	promote_discovered_targets.py \
	promote_gold_agent_image.py \
	submit_add_host.py \
	update_group_of_agents.py

#CLEANFILES = $(python_PYTHON)
