

# python_PYTHON = # => /usr/local/lib/python3.9/site-packages
# pkgpython_PYTHON = # => /usr/local/lib/python3.9/site-packages/vodafoneoem

# The following will not be found in %{_libdir} in RPM (you have to use
# %{prefix}/lib in the .spec file to package:

# Really for shared libraries (i.e. C etc)
# pyexec_PYTHON = # => /usr/local/lib64/python3.9/site-packages
# pkgpyexec_PYTHON = # =>  /usr/local/lib64/python3.9/site-packages/vodafoneoem

pkgpython_PYTHON = \
	password_handler.py
